Added code to re-sync cs and cl
